--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.micode.soundrecorder"
+    package="info.guardianproject.soundrecorder"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -30,17 +30,19 @@
 
     <application
         android:icon="@drawable/ic_launcher_soundrecorder"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Transparent"
+         >
         <activity
             android:configChanges="keyboardHidden"
             android:launchMode="singleTop"
-            android:name="SoundRecorder"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:name="net.micode.soundrecorder.SoundRecorder"
+            android:screenOrientation="portrait"            
+            android:theme="@style/Theme.Transparent"
+             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter >
                 <action android:name="android.intent.action.GET_CONTENT" />
@@ -61,13 +63,13 @@
         <activity
             android:label="@string/preferences_title"
             android:launchMode="singleTop"
-            android:name="SoundRecorderPreferenceActivity"
+            android:name="net.micode.soundrecorder.SoundRecorderPreferenceActivity"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
 
         <service
             android:exported="false"
-            android:name="RecorderService" >
+            android:name="net.micode.soundrecorder.RecorderService" >
         </service>
     </application>
 
